--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>NBT-Edit</title>
+		<meta name="description" content="Simple online NBT editor & ui component">
 		%sveltekit.head%
 	</head>
 	<body>
