--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>NBT-Edit</title>
-		<meta name="description" content="Simple online NBT editor & ui component">
+		<meta name="description" content="Simple online NBT editor & ui component" />
 		%sveltekit.head%
 	</head>
 	<body>
